--- a/src/app/hero-details/hero-details.component.html
+++ b/src/app/hero-details/hero-details.component.html
@@ -4,4 +4,14 @@
     </label>
 </div>
 <button (click)="goBack()">go back</button>
+<button (click)="save()"> save  </button>
+
+<!--Adding in new -hero and button-->
+
+
+ 
+
+
+
+
 
